--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2024"
 [dependencies]
 libc = "0.2"
 crossbeam = "0.8"
-tokio = { version="1", features=["rt", "rt-multi-thread", "sync", "macros"] }
+tokio = { version="1", features=["rt", "rt-multi-thread", "sync", "macros", "io-util"] }
 
 [[bin]]
 name = "tcp_server"
